# WhisperRecognition

./: .gitattributes  CMakeLists.txt  README.md  whisper_poc.sln  whisper_poc.vcxproj  whisper_poc.vcxproj.filters
lib/: ggml-base.exp  ggml-base.lib  ggml-cpu.exp  ggml-cpu.lib  ggml-cuda.exp  ggml-cuda.lib  ggml.exp  whisper.exp  whisper.lib
src/: dsp.hpp  main.cpp  recorder.hpp  vad.hpp
